deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mondaynightpoker-vue
  labels:
    app: mondaynightpoker-vue
    type: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mondaynightpoker-vue
      type: frontend
  template:
    metadata:
      labels:
        app: mondaynightpoker-vue
        type: frontend
    spec:
      imagePullSecrets:
        - name: github
      containers:
        - name: mondaynightpoker-vue
          image: ghcr.io/weters/mondaynightpoker-vue/mondaynightpoker-vue:latest
          readinessProbe:
            httpGet:
              port: 80
              path: /
          livenessProbe:
            httpGet:
              port: 80
              path: /
