deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mondaynightpoker-vue
  labels:
    app: mondaynightpoker-vue
    type: frontend
spec:
  selector:
    app: mondaynightpoker-vue
    type: frontend
  ports:
    - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mondaynightpoker-vue-beta
  labels:
    app: mondaynightpoker-vue-beta
    type: frontend
spec:
  selector:
    app: mondaynightpoker-vue-beta
    type: frontend
  ports:
    - port: 80
