deployments/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mondaynightpoker-vue
  labels:
    app: mondaynightpoker-vue
    type: frontend
spec:
  tls:
    - hosts:
        - mondaynight.bid
      secretName: tls-mondaynightpoker
    - hosts:
        - beta.mondaynight.bid
      secretName: tls-mondaynightpoker
  rules:
    - host: mondaynight.bid
      http:
        paths:
          - backend:
              serviceName: mondaynightpoker-vue
              servicePort: 80
    - host: beta.mondaynight.bid
      http:
        paths:
          - backend:
              serviceName: mondaynightpoker-vue-beta
              servicePort: 80
